--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ html,body{
     width: 100%;
     padding: 0 1vw;
     padding-top: 20vh;
-    /* background-color: black; */
+    
 }
 #page1 h1{
-    /* background-color: red; */
+  
     font-size: 15vw;
     text-transform: uppercase;
     font-family: futura, serif;
@@ -63,7 +63,7 @@ html,body{
 
 #page2{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -71,18 +71,22 @@ html,body{
     justify-content: space-between;
 }
 #page2 .elem{
-    height: 100%;
+    min-height: 100%;
     width: 32%;
     background-color: red;
     overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
 #page2 .elem img{
     height: 100%;
     width: 100%;
+    scale: 1;
     object-fit: cover;
-    scale: 2;
 }
 
 @media (max-width:450px) {
@@ -98,14 +102,14 @@ html,body{
         
     }
     #page1 h1{
-        /* background-color: red; */
+        
         font-size: 15vw;
         line-height: 6vh;
         letter-spacing: -1px;
     }
     #video-con{
         height: 25vh;
-        /* width: 100%; */
+        width: 100%;
        
         margin-top: 3vw;
         
@@ -125,4 +129,5 @@ html,body{
         scale: 1;
         transform: translate(-50% ,-50%);
     }
-}
+} 
+
