--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 html,body{
     height: 100%;
     width: 100%;
+    background-color: #f7f7f7;
 }
 
 #page1{
@@ -73,12 +74,12 @@ html,body{
 #page2 .elem{
     min-height: 100%;
     width: 32%;
-    background-color: red;
     overflow: hidden;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    
     
 }
 
@@ -87,38 +88,75 @@ html,body{
     width: 100%;
     scale: 1;
     object-fit: cover;
+    display: flex;
+    
 }
 
-@media (max-width:450px) {
-    #main{
-        background-color: red;
-    }
+#page2 .elem .drop{
+    height: 50px;
+    width: 80%;
+    border-radius: 50px;
+    position: absolute;
+    background-color: red;
+    
+    /* transform: translate(-50%,-50%); */
+    
+}
+#page3{
+    min-height: 120vh;
+    width: 100%;
+    position: relative;
+    
+    display: flex;
+    /* margin-bottom: 20%; */
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.child{
+    height: 50%;
+    width: 50%;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#page3 .child img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    /* object-position: center; */
+    
+}
+
+#page2 .elem .drop:hover{
+    height: 200px;
+}
+
+@media (max-width:600px) {
     #page1{
         min-height: 70vh;
-        position: relative;
         width: 100%;
-        padding: 0 3vw;
+    
+        padding:0 2vw;
         padding-top: 20vh;
         
     }
     #page1 h1{
-        
         font-size: 15vw;
-        line-height: 6vh;
-        letter-spacing: -1px;
+        line-height: 9vh;
+        letter-spacing: 0px;
     }
     #video-con{
-        height: 25vh;
-        width: 100%;
-       
+        height: 30vh;
+         
         margin-top: 3vw;
         
     }
+     
     #video-con #play{
-        padding: 6vw 5.2vw;
-        filter: blur(0.5);
-        color: aliceblue;
-        font-size: 3vw;
+        padding: 9vw 7vw;
+        font-size: 5vw;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -127,7 +165,38 @@ html,body{
         border-radius: 50%;
         opacity: 1;
         scale: 1;
-        transform: translate(-50% ,-50%);
-    }
-} 
+        transform: translate(-50%,-50%);
+     }
+     
+    #page2{
+        width: 100%;
+        min-height: 100vh;
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 3vw 1vw;
+        flex-direction: column;
+        justify-content: space-between;
+}
+    #page2 .elem{
+        min-height: 100vh;
+        width: 100%;
+        
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: -5vw;
+    
+}
 
+    #page2 .elem img{
+        height: 100%;
+        width: 100%;
+        scale: 1;
+        object-fit: cover;
+}
+     
+
+}
