--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ html,body{
     position: fixed;
     text-transform: uppercase;
     font-family: serif;
+    transform: translate(-50%,-50%) ;
     border-radius: 50%;
     opacity: 0;
     scale: 0 ;
@@ -127,6 +128,15 @@ html,body{
     object-fit: cover;
     /* object-position: center; */
     
+}
+#cursor{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background-color: violet;
+    position: fixed;
+   
+    transform: translate(-50%,-50%) scale(0);
 }
 
 #page2 .elem .drop:hover{
