--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Futura;
-    src: url(./Futura-Bold.ttf);
+    src: url(Futura-Bold.ttf);
 }
 @font-face {
     font-family: Gilroy;
@@ -85,7 +85,7 @@ body {
 #cursor {
     height: 180px;
     width: 180px;
-    background-color: rgba(224, 139, 189, 0.814);
+    background-color: rgba(255, 187, 0, 0.814);
     border-radius: 50%;
     position: fixed;
     transform: translate(-50%, -50%) scale(0);
@@ -113,30 +113,18 @@ body {
 #video-container {
     height: 100vh;
     width: 100%;
-    background-color: grey;
+    
     margin-top: 1vw;
     position: relative;
 }
 
-#video-container video {
+#video-container img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-#video-container #play {
-    padding: 3vw 2.2vw;
-    background-color: black;
-    color: #fff;
-    font-size: 1.3vw;
-    position: fixed;
-    text-transform: uppercase;
-    font-family: futura;
-    border-radius: 50%;
-    opacity: 0;
-    scale: 0;
 
-}
 
 #page2 {
     min-height: 100vh;
@@ -172,9 +160,19 @@ body {
     width: 70%;
     position: absolute;
     z-index: 9;
-    background-color: rgb(229, 156, 186);
+    background-color: rgb(0, 190, 243);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
 
 
+}
+#page2 .elem .dets .same{
+    padding: 12px;
+}
+#page2 .elem .dets:hover{
+    height: 100px;
 }
 
 #page3 {
