--- a/style.css
+++ b/style.css
@@ -169,12 +169,50 @@ body {
 
 
 }
+
+#page2 .elem .down{
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    width: 70%;
+    height: 250px;
+    border-bottom: 205px;
+    top: 48%;
+    border-radius: 25px;
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    background-color: #000;
+    
+    
+}
+
+#page2 .elem .down .fsame{
+    width: 48%;
+    height: 65%;
+   
+
+    
+
+
+}
+#page2 .elem .down .fsame img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#page2 .elem .dets:hover + .down,
+#page2 .elem .down:hover {
+    opacity: 1;
+    visibility: visible;
+    
+}
 #page2 .elem .dets .same{
     padding: 12px;
 }
-#page2 .elem .dets:hover{
-    height: 100px;
-}
+
 
 #page3 {
     min-height: 120vh;
