--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
     font-family: Futura;
     src: url(Futura-Bold.ttf);
 }
+
 @font-face {
     font-family: Gilroy;
     src: url(./Gilroy-Medium.ttf);
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +20,8 @@
     background-color: #000;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     width: 100%;
 }
@@ -114,7 +117,7 @@ body {
 #video-container {
     height: 100vh;
     width: 100%;
-    
+
     margin-top: 1vw;
     position: relative;
 }
@@ -156,60 +159,73 @@ body {
 }
 
 #page2 .elem .dets {
-    height: 60px;
-    border-radius: 50px;
+    height: 270px;
+    border-radius: 30px;
     width: 70%;
     position: absolute;
-    z-index: 9;
-    background-color: rgb(0, 190, 243);
+    z-index: 999;
+    /* background-color: rgb(0, 190, 243); */
+
+
+}
+
+#page2 .elem .dets .dets1 {
     display: flex;
     align-items: center;
     justify-content: center;
     justify-content: space-between;
-
-
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    overflow: hidden;
+    border-radius: inherit;
+    background-color: whitesmoke;
 }
 
-#page2 .elem .down{
-  
+#page2 .elem .dets .down {
+
     display: flex;
+    position: relative;
     justify-content: center;
-    align-items: center;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    width: 70%;
-    height: 250px;
-    border-bottom: 205px;
-    top: 48%;
-    border-radius: 25px;
-    position: absolute;
+    top: 25%;
     opacity: 0;
     visibility: hidden;
-    background-color: #000;
-    
-    
+
+   
+    background: rgba(245, 245, 245, 0.453);
+  
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15.4px);
+    -webkit-backdrop-filter: blur(15.4px);
+    border: 1px solid rgba(255, 255, 255, 0.06);
+
 }
 
-#page2 .elem .down .fsame{
+#page2 .elem .dets .down .fsame {
     width: 48%;
     height: 65%;
-   
 
-    
+
+
 
 
 }
-#page2 .elem .down .fsame img{
+
+#page2 .elem .down .fsame img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-#page2 .elem .dets:hover + .down,
+
+#page2 .elem .dets1:hover+.down,
 #page2 .elem .down:hover {
     opacity: 1;
     visibility: visible;
-    
+
 }
-#page2 .elem .dets .same{
+
+#page2 .elem .dets .same {
     padding: 12px;
 }
 
@@ -240,36 +256,41 @@ body {
 }
 
 
-#page4{
+#page4 {
     min-height: 100vh;
     width: 100%;
-    
+
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    
+
 }
-#page4 .impact-img-1{
-    
+
+#page4 .impact-img-1 {
+
     width: 100%;
     height: 100%;
-    
+
 }
-#page4 .impact .imp{
+
+#page4 .impact .imp {
     width: 85%;
     margin-top: 30%;
     margin-left: 4.5%;
 
 }
-#page4 .impact .imp p{
+
+#page4 .impact .imp p {
     margin-top: 8%;
     font-size: 18px;
 }
-#page4 .impact-img-1 img{
+
+#page4 .impact-img-1 img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     padding: 4% 2%;
 }
+
 @media (max-width:600px) {
 
     #nav {
@@ -307,7 +328,8 @@ body {
         height: 67px;
         width: 80px;
     }
-    #nav #twogoodlogo{
+
+    #nav #twogoodlogo {
         height: 40px;
         margin-left: -20px;
     }
